WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69856
[EFL] DRT: Do not abort() when an unknown key is pressed.
https://bugs.webkit.org/show_bug.cgi?id=69856
Summary
[EFL] DRT: Do not abort() when an unknown key is pressed.
Raphael Kubo da Costa (:rakuco)
Reported
2011-10-11 11:38:36 PDT
[EFL] DRT: Do not abort() when an unknown key is pressed.
Attachments
Patch
(2.78 KB, patch)
2011-10-11 11:39 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-10-11 11:39:54 PDT
Created
attachment 110548
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-11 12:36:24 PDT
Comment on
attachment 110548
[details]
Patch Clearing flags on attachment: 110548 Committed
r97169
: <
http://trac.webkit.org/changeset/97169
>
WebKit Review Bot
Comment 3
2011-10-11 12:36:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug